création de header

--- a/index.html
+++ b/index.html
@@ -7,37 +7,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>charte</title>
     <style>
-        body {
-            max-width: 50rem;
-            margin: auto;
-        }
+
     </style>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <img src="images/logo.svg" alt="Logo_Ra-Da">
-    <h1>Razzle Dazzle</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam illo neque nulla eveniet dignissimos
-        aspernatur voluptate tempora eius? Doloribus vitae, neque similique perferendis unde rerum recusandae quia sit
-        dolorum corporis?</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus amet quod commodi neque est sit veniam vitae
-        fugit, molestias, minus impedit deserunt nesciunt earum dignissimos, expedita quae animi? Expedita, aliquam!</p>
+    <header>
+        <div class="logo"><img src="images/logo.svg" alt="Razzle Dazzle"></div>
+        <div class="intro">
+            <h2>intro... Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, eveniet. Cupiditate repellendus
+                modi maiores qui sed praesentium, ratione, laudantium incidunt, soluta ullam a minima repellat eum enim
+                ipsa laboriosam. Maxime!</h2>
+        </div>
+        <nav> navigation ici...</nav>
 
-    <h2>Sous titre lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+        <div class="deco">
+            <img src="razzle-images/razz1.svg" class="r1" alt="">
+        </div>
+    </header>
 
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, odit voluptatibus praesentium natus excepturi
-        ipsa quasi ipsam consequatur voluptatem, error esse explicabo rem expedita reiciendis autem eius modi sapiente
-        consectetur.</p>
+    <main>
+        <img src="images/logo.svg" alt="Logo_Ra-Da">
+        <h1>Razzle Dazzle</h1>
 
-    <h3>Petit titre</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam illo neque nulla eveniet dignissimos
+            aspernatur voluptate tempora eius? Doloribus vitae, neque similique perferendis unde rerum recusandae quia
+            sit
+            dolorum corporis?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus amet quod commodi neque est sit veniam
+            vitae
+            fugit, molestias, minus impedit deserunt nesciunt earum dignissimos, expedita quae animi? Expedita, aliquam!
+        </p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum nostrum, sequi sunt quam perferendis fugiat ab.
-        Quo fugiat voluptatibus expedita? Magni eaque voluptatibus, corporis consectetur veniam labore ex voluptate
-        corrupti.</p>
+        <h2>Sous titre lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
 
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, odit voluptatibus praesentium natus
+            excepturi
+            ipsa quasi ipsam consequatur voluptatem, error esse explicabo rem expedita reiciendis autem eius modi
+            sapiente
+            consectetur.</p>
 
+        <h3>Petit titre</h3>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum nostrum, sequi sunt quam perferendis fugiat
+            ab.
+            Quo fugiat voluptatibus expedita? Magni eaque voluptatibus, corporis consectetur veniam labore ex voluptate
+            corrupti.</p>
+
+    </main>
 </body>
 
 </html>
