création du fond pour la page du site des profiles des artistes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
         <nav> navigation ici...</nav>
 
         <div class="deco">
-            <img src="razzle-images/razz1.svg" class="r1" alt="">
+            <img src="razzle-images/razz1.svg" class="r1" alt="r1">
+        </div>
+        <div class="deco">
+            <img src="razzle-images/Razz2.svg" class="r2" alt="r2">
+        </div>
+        <div class="deco">
+            <img src="razzle-images/Razz3.svg" class="r3" alt="r3">
         </div>
     </header>
 
