--- a/index.html
+++ b/index.html
@@ -17,9 +17,30 @@
     <header>
         <div class="logo"><img src="images/logo.svg" alt="Razzle Dazzle"></div>
         <div class="intro">
-            <h2>intro... Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, eveniet. Cupiditate repellendus
-                modi maiores qui sed praesentium, ratione, laudantium incidunt, soluta ullam a minima repellat eum enim
-                ipsa laboriosam. Maxime!</h2>
+            <h2>Bienvenue dans le monde de Razzle Dazzle, votre allié ultime pour protéger votre art et nourrir votre
+                créativité!
+                Dans une ère où l'intelligence artificielle s'épanouit et évolue à une vitesse fulgurante, les artistes
+                sont confrontés à de nouveaux défis pour préserver l'authenticité et la singularité de leurs œuvres.
+                C'est là que Razzle Dazzle entre en jeu, avec un service innovant conçu spécifiquement pour les artistes
+                qui souhaitent protéger leurs créations contre les empiétements de l'intelligence artificielle, tout en
+                développant leur potentiel créatif.
+
+                Notre mission est de fournir aux artistes un site web personnalisé, offrant une plateforme sécurisée
+                pour exposer leurs œuvres dans toute leur splendeur. Grâce à des outils de protection avancés et des
+                mesures de sécurité renforcées, Razzle Dazzle vous permet de garder le contrôle total sur la diffusion
+                et l'utilisation de vos créations artistiques. Vous pourrez ainsi partager vos œuvres en toute
+                confiance, en sachant qu'elles restent entre des mains sûres! Mais Razzle Dazzle ne s'arrête pas là!
+
+                Nous croyons fermement que la créativité est une flamme qui ne demande qu'à être nourrie. C'est pourquoi
+                nous avons créé un blog riche en ressources, avec une multitude d'articles conçus pour vous aider à
+                affûter votre esprit créatif. Notre équipe d'experts passionnés de l'art partagera des conseils
+                pratiques, des techniques novatrices et des réflexions inspirantes pour stimuler votre imagination et
+                vous aider à explorer de nouvelles voies artistiques.
+                Que vous soyez un peintre talentueux, un musicien prodigieux, un photographe visionnaire ou un écrivain
+                captivant, Razzle Dazzle est là pour vous soutenir dans votre parcours artistique. Nous croyons en la
+                puissance de l'art pour transcender les frontières et émouvoir les âmes. Rejoignez-nous dès aujourd'hui
+                et laissez Razzle Dazzle vous accompagner vers de nouveaux sommets de créativité et de protection
+                artistique.</h2>
         </div>
         <nav> navigation ici...</nav>
 
@@ -32,6 +53,16 @@
         <div class="deco">
             <img src="razzle-images/Razz3.svg" class="r3" alt="r3">
         </div>
+        <div class="deco">
+            <img src="razzle-images/Razz4.svg" class="r4" alt="r4">
+        </div>
+        <div class="deco">
+            <img src="razzle-images/Razz5.svg" class="r5" alt="r5">
+        </div>
+        <div class="deco">
+            <img src="razzle-images/Razz6.svg" class="r6" alt="r6">
+        </div>
+
     </header>
 
     <main>
