Suppression des valeurs inutiles entre les alt

--- a/index.html
+++ b/index.html
@@ -1,99 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>charte</title>
-    <style>
+    <style></style>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-    </style>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
+  <body>
     <header>
-        <div class="logo"><img src="images/logo.svg" alt="Razzle Dazzle"></div>
-        <div class="intro">
-            <h2>Bienvenue dans le monde de Razzle Dazzle, votre allié ultime pour protéger votre art et nourrir votre
-                créativité!
-                Dans une ère où l'intelligence artificielle s'épanouit et évolue à une vitesse fulgurante, les artistes
-                sont confrontés à de nouveaux défis pour préserver l'authenticité et la singularité de leurs œuvres.
-                C'est là que Razzle Dazzle entre en jeu, avec un service innovant conçu spécifiquement pour les artistes
-                qui souhaitent protéger leurs créations contre les empiétements de l'intelligence artificielle, tout en
-                développant leur potentiel créatif.
+      <div class="logo"><img src="images/logo.svg" alt="Razzle Dazzle" /></div>
+      <div class="intro">
+        <h2>
+          Bienvenue dans le monde de Razzle Dazzle, votre allié ultime pour
+          protéger votre art et nourrir votre créativité! Dans une ère où
+          l'intelligence artificielle s'épanouit et évolue à une vitesse
+          fulgurante, les artistes sont confrontés à de nouveaux défis pour
+          préserver l'authenticité et la singularité de leurs œuvres. C'est là
+          que Razzle Dazzle entre en jeu, avec un service innovant conçu
+          spécifiquement pour les artistes qui souhaitent protéger leurs
+          créations contre les empiétements de l'intelligence artificielle, tout
+          en développant leur potentiel créatif. Notre mission est de fournir
+          aux artistes un site web personnalisé, offrant une plateforme
+          sécurisée pour exposer leurs œuvres dans toute leur splendeur. Grâce à
+          des outils de protection avancés et des mesures de sécurité
+          renforcées, Razzle Dazzle vous permet de garder le contrôle total sur
+          la diffusion et l'utilisation de vos créations artistiques. Vous
+          pourrez ainsi partager vos œuvres en toute confiance, en sachant
+          qu'elles restent entre des mains sûres! Mais Razzle Dazzle ne s'arrête
+          pas là! Nous croyons fermement que la créativité est une flamme qui ne
+          demande qu'à être nourrie. C'est pourquoi nous avons créé un blog
+          riche en ressources, avec une multitude d'articles conçus pour vous
+          aider à affûter votre esprit créatif. Notre équipe d'experts
+          passionnés de l'art partagera des conseils pratiques, des techniques
+          novatrices et des réflexions inspirantes pour stimuler votre
+          imagination et vous aider à explorer de nouvelles voies artistiques.
+          Que vous soyez un peintre talentueux, un musicien prodigieux, un
+          photographe visionnaire ou un écrivain captivant, Razzle Dazzle est là
+          pour vous soutenir dans votre parcours artistique. Nous croyons en la
+          puissance de l'art pour transcender les frontières et émouvoir les
+          âmes. Rejoignez-nous dès aujourd'hui et laissez Razzle Dazzle vous
+          accompagner vers de nouveaux sommets de créativité et de protection
+          artistique.
+        </h2>
+      </div>
+      <nav>navigation ici...</nav>
 
-                Notre mission est de fournir aux artistes un site web personnalisé, offrant une plateforme sécurisée
-                pour exposer leurs œuvres dans toute leur splendeur. Grâce à des outils de protection avancés et des
-                mesures de sécurité renforcées, Razzle Dazzle vous permet de garder le contrôle total sur la diffusion
-                et l'utilisation de vos créations artistiques. Vous pourrez ainsi partager vos œuvres en toute
-                confiance, en sachant qu'elles restent entre des mains sûres! Mais Razzle Dazzle ne s'arrête pas là!
-
-                Nous croyons fermement que la créativité est une flamme qui ne demande qu'à être nourrie. C'est pourquoi
-                nous avons créé un blog riche en ressources, avec une multitude d'articles conçus pour vous aider à
-                affûter votre esprit créatif. Notre équipe d'experts passionnés de l'art partagera des conseils
-                pratiques, des techniques novatrices et des réflexions inspirantes pour stimuler votre imagination et
-                vous aider à explorer de nouvelles voies artistiques.
-                Que vous soyez un peintre talentueux, un musicien prodigieux, un photographe visionnaire ou un écrivain
-                captivant, Razzle Dazzle est là pour vous soutenir dans votre parcours artistique. Nous croyons en la
-                puissance de l'art pour transcender les frontières et émouvoir les âmes. Rejoignez-nous dès aujourd'hui
-                et laissez Razzle Dazzle vous accompagner vers de nouveaux sommets de créativité et de protection
-                artistique.</h2>
-        </div>
-        <nav> navigation ici...</nav>
-
-        <div class="deco">
-            <img src="razzle-images/razz1.svg" class="r1" alt="r1">
-        </div>
-        <div class="deco">
-            <img src="razzle-images/Razz2.svg" class="r2" alt="r2">
-        </div>
-        <div class="deco">
-            <img src="razzle-images/Razz3.svg" class="r3" alt="r3">
-        </div>
-        <div class="deco">
-            <img src="razzle-images/Razz4.svg" class="r4" alt="r4">
-        </div>
-        <div class="deco">
-            <img src="razzle-images/Razz5.svg" class="r5" alt="r5">
-        </div>
-        <div class="deco">
-            <img src="razzle-images/Razz6.svg" class="r6" alt="r6">
-        </div>
-
+      <div class="deco">
+        <img src="razzle-images/razz1.svg" class="r1" alt="" />
+      </div>
+      <div class="deco">
+        <img src="razzle-images/Razz2.svg" class="r2" alt="" />
+      </div>
+      <div class="deco">
+        <img src="razzle-images/Razz3.svg" class="r3" alt="" />
+      </div>
+      <div class="deco">
+        <img src="razzle-images/Razz4.svg" class="r4" alt="" />
+      </div>
+      <div class="deco">
+        <img src="razzle-images/Razz5.svg" class="r5" alt="" />
+      </div>
+      <div class="deco">
+        <img src="razzle-images/Razz6.svg" class="r6" alt="" />
+      </div>
     </header>
 
     <main>
-        <img src="images/logo.svg" alt="Logo_Ra-Da">
-        <h1>Razzle Dazzle</h1>
+      <img src="images/logo.svg" alt="Logo_Ra-Da" />
+      <h1>Razzle Dazzle</h1>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam illo neque nulla eveniet dignissimos
-            aspernatur voluptate tempora eius? Doloribus vitae, neque similique perferendis unde rerum recusandae quia
-            sit
-            dolorum corporis?</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus amet quod commodi neque est sit veniam
-            vitae
-            fugit, molestias, minus impedit deserunt nesciunt earum dignissimos, expedita quae animi? Expedita, aliquam!
-        </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam illo
+        neque nulla eveniet dignissimos aspernatur voluptate tempora eius?
+        Doloribus vitae, neque similique perferendis unde rerum recusandae quia
+        sit dolorum corporis?
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus amet
+        quod commodi neque est sit veniam vitae fugit, molestias, minus impedit
+        deserunt nesciunt earum dignissimos, expedita quae animi? Expedita,
+        aliquam!
+      </p>
 
-        <h2>Sous titre lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+      <h2>
+        Sous titre lorem ipsum dolor sit amet consectetur adipisicing elit.
+      </h2>
 
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, odit voluptatibus praesentium natus
-            excepturi
-            ipsa quasi ipsam consequatur voluptatem, error esse explicabo rem expedita reiciendis autem eius modi
-            sapiente
-            consectetur.</p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, odit
+        voluptatibus praesentium natus excepturi ipsa quasi ipsam consequatur
+        voluptatem, error esse explicabo rem expedita reiciendis autem eius modi
+        sapiente consectetur.
+      </p>
 
-        <h3>Petit titre</h3>
+      <h3>Petit titre</h3>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum nostrum, sequi sunt quam perferendis fugiat
-            ab.
-            Quo fugiat voluptatibus expedita? Magni eaque voluptatibus, corporis consectetur veniam labore ex voluptate
-            corrupti.</p>
-
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+        nostrum, sequi sunt quam perferendis fugiat ab. Quo fugiat voluptatibus
+        expedita? Magni eaque voluptatibus, corporis consectetur veniam labore
+        ex voluptate corrupti.
+      </p>
     </main>
-</body>
-
+  </body>
 </html>
